--- a/html/petitDej.html
+++ b/html/petitDej.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plateaux-repas - Stud Saveur</title>
+    <title>Stud Saveur - Petit Déjeuner</title>
     <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
@@ -11,8 +11,8 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Accueil</a></li>
-                <li><a href="petitDej.html">Petit Déjeuner</a></li>
-                <li><a href="#">Déjeuner</a></li>
+                <li><a href="#">Petit Déjeuner</a></li>
+                <li><a href="plateaux-repas.html">Déjeuner</a></li>
                 <li><a href="desserts.html">Desserts</a></li>
                 <li><a href="boissons.html">Boissons et Cocktails</a></li>
                 <li><a href="connexion.html">Connexion</a></li>
@@ -20,23 +20,22 @@
             </ul>
         </nav>
     </header>
-    
     <main class="content">
-        <h1 class="page-title">Nos Plateaux-Repas</h1>
-        <p class="page-description">Découvrez notre sélection de plateaux-repas équilibrés et savoureux, préparés avec des ingrédients frais et de qualité.</p>
+        <h1 class="page-title">Nos Petits Déjeuners</h1>
+        <p class="page-description">Commencez votre journée du bon pied avec nos formules petit-déjeuner variées et équilibrées.</p>
         
         <section class="menu-items">
             <article class="menu-item">
-                <h2>Plateau Gourmet</h2>
-                <p>Un assortiment raffiné de viandes, légumes et accompagnements, idéal pour un repas équilibré.</p>
+                <h2>Petit Déjeuner Continental</h2>
+                <p>Un assortiment de viennoiseries, pain, beurre et confitures accompagné d’un jus d’orange frais.</p>
             </article>
             <article class="menu-item">
-                <h2>Plateau Végétarien</h2>
-                <p>Une alternative saine et savoureuse avec des produits 100% végétariens.</p>
+                <h2>Petit Déjeuner Énergétique</h2>
+                <p>Un bol de céréales, yaourt nature, fruits frais et un smoothie maison.</p>
             </article>
             <article class="menu-item">
-                <h2>Plateau Exotique</h2>
-                <p>Un voyage culinaire avec des saveurs venues d’ailleurs, parfait pour les amateurs de découvertes.</p>
+                <h2>Petit Déjeuner Gourmand</h2>
+                <p>Une sélection de pancakes, miel, chocolat chaud et fruits frais.</p>
             </article>
         </section>
     </main>
