--- a/html/boissons.html
+++ b/html/boissons.html
@@ -11,19 +11,10 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Accueil</a></li>
-                <li><a href="plateaux-repas.html">Plateaux-repas</a></li>
-                <li><a href="buffets-cocktails.html">Buffets-Cocktails</a></li>
-                <li><a href="pauses-cafe.html">Pauses café</a></li>
-                <li><a href="snacking.html">Snacking</a></li>
-                <li><a href="box-sandwichs.html">Box sandwichs</a></li>
-                <li><a href="box-salades.html">Box salades</a></li>
-                <li><a href="sandwichs.html">Sandwichs</a></li>
-                <li><a href="salades-bowls.html">Salades et Bowls</a></li>
-                <li><a href="plats-pates.html">Plats et pâtes</a></li>
+                <li><a href="petitDej.html">Petit Déjeuner</a></li>
+                <li><a href="plateaux-repas.html">Déjeuner</a></li>
                 <li><a href="desserts.html">Desserts</a></li>
-                <li><a href="#">Boissons</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="apropos.html">À propos</a></li>
+                <li><a href="#">Boissons et Cocktails</a></li>
                 <li><a href="connexion.html">Connexion</a></li>
                 <li><a href="inscription.html">Inscription</a></li>
             </ul>
