--- a/index.html
+++ b/index.html
@@ -11,19 +11,10 @@
         <nav>
             <ul>
                 <li><a href="#">Accueil</a></li>
-                <li><a href="./html/plateaux-repas.html">Plateaux-repas</a></li>
-                <li><a href="./html/buffets-cocktails.html">Buffets-Cocktails</a></li>
-                <li><a href="./html/pauses-cafe.html">Pauses café</a></li>
-                <li><a href="./html/snacking.html">Snacking</a></li>
-                <li><a href="./html/box-sandwichs.html">Box sandwichs</a></li>
-                <li><a href="./html/box-salades.html">Box salades</a></li>
-                <li><a href="./html/sandwichs.html">Sandwichs</a></li>
-                <li><a href="./html/salades-bowls.html">Salades et Bowls</a></li>
-                <li><a href="./html/plats-pates.html">Plats et pâtes</a></li>
+                <li><a href="./html/petitDej.html">Petit Déjeuner</a></li>
+                <li><a href="./html/plateaux-repas.html">Déjeuner</a></li>
                 <li><a href="./html/desserts.html">Desserts</a></li>
-                <li><a href="./html/boissons.html">Boissons</a></li>
-                <li><a href="./html/contact.html">Contact</a></li>
-                <li><a href="./html/apropos.html">À propos</a></li>
+                <li><a href="./html/boissons.html">Boissons et Cocktails</a></li>
                 <li><a href="./html/connexion.html">Connexion</a></li>
                 <li><a href="./html/inscription.html">Inscription</a></li>
             </ul>
@@ -36,6 +27,8 @@
     
     <footer>
         <p>&copy; 2025 Stud Saveur - Tous droits réservés</p>
+        <li><a href="./html/contact.html">Contact</a></li>
+        <li><a href="./html/apropos.html">À propos</a></li>
     </footer>
 </body>
 </html>
